==> klaus-liebler/labathome/ESP32_LABATHOME_PCB_TEST/lib/lcdesp32/src/spilcd16bit.cc <==
#include <Arduino.h>
#include "spilcd16bit.hh"
#include <algorithm>
#include <stdio.h>
#include <string.h>
#include <stdarg.h>
#define LOG_LOCAL_LEVEL ESP_LOG_DEBUG
#include <esp_log.h>

void SPILCD16bit::begin(void) {
	
	ESP_LOGD(TAG, "Initialize the SPI bus");
    spi_bus_config_t buscfg={};
	buscfg.miso_io_num=(_miso>= GPIO_NUM_0 && _miso<GPIO_NUM_MAX)?_miso:-1;
	buscfg.mosi_io_num=this->_mosi;
	buscfg.sclk_io_num=this->_clk;
	buscfg.quadwp_io_num=-1;
	buscfg.quadhd_io_num=-1;
	buscfg.max_transfer_sz=PARALLEL_LINES*240*2+8;
    ESP_ERROR_CHECK(spi_bus_initialize(this->spi_host, &buscfg, this->dmaChannel));

    ESP_LOGD(TAG, "Attach the LCD to the SPI bus");
    spi_device_interface_config_t devcfg={};
	devcfg.clock_speed_hz=SPI_MASTER_FREQ_10M;    //Clock out at 10 MHz
	devcfg.mode=0;                                //SPI mode 0
    devcfg.spics_io_num=(_cs< GPIO_NUM_0 || _cs>=GPIO_NUM_MAX)?-1:_cs;               //CS pin
    devcfg.queue_size=7;                          //We want to be able to queue 7 transactions at a time
    devcfg.pre_cb=lcd_spi_pre_transfer_callback;  //Specify pre-transfer callback to handle D/C line
    ESP_ERROR_CHECK(spi_bus_add_device(this->spi_host, &devcfg, &this->spi_dev));
    
	//Initialize the LCD
	ESP_ERROR_CHECK(spi_device_acquire_bus(spi_dev, portMAX_DELAY));

    //Initialize non-SPI GPIOs
	ESP_LOGD(TAG, "Set _dc pin to %d", _dc);
	Serial.printf("Set _dc pin to %d\n", _dc);
    ESP_ERROR_CHECK(gpio_set_direction(_dc, GPIO_MODE_OUTPUT)); //always necessary

	if(_backlight>= GPIO_NUM_0 && _backlight<GPIO_NUM_MAX)
	{
		ESP_LOGD(TAG, "Set _backlight pin to %d", _backlight);
		Serial.printf("Set _backlight pin to %d\n", _backlight);
		ESP_ERROR_CHECK(gpio_set_direction(_backlight, GPIO_MODE_OUTPUT)); //not always necessary
		backlight(true);
	}
	
	if(_rst>= GPIO_NUM_0 && _rst<GPIO_NUM_MAX)
	{
		ESP_LOGD(TAG, "Set _rst pin to %d", _rst);
		Serial.printf("Set _rst pin to %d\n", _rst);
		ESP_ERROR_CHECK(gpio_set_direction(_rst, GPIO_MODE_OUTPUT)); //not always necessary
		ESP_ERROR_CHECK(gpio_set_level(_rst, 0));
    	vTaskDelay(100 / portTICK_RATE_MS);
    	ESP_ERROR_CHECK(gpio_set_level(_rst, 1));
    	vTaskDelay(100 / portTICK_RATE_MS);
	}
	
	chipInit();
}

void SPILCD16bit::writecommand(const uint8_t cmd)
{
    esp_err_t ret;
    spi_transaction_t t={};
    t.length=8;                     //Command is 8 bits
    t.tx_buffer=&cmd;               //The data is the cmd itself
    t.user=(void*)(0x00000000+this->_dc);                //D/C needs to be set to 0
    ret=spi_device_polling_transmit(this->spi_dev, &t);  //Transmit!
    assert(ret==ESP_OK);            //Should have had no issues.
}

void SPILCD16bit::writedata(const uint8_t data)
{
    esp_err_t ret;
    spi_transaction_t t={};
    t.length=8;                 //Len is in bytes, transaction length is in bits.
    t.tx_buffer=&data;               //Data
    t.user=(void*)(0x80000000+this->_dc);                //D/C needs to be set to 1
    ret=spi_device_polling_transmit(this->spi_dev,  &t);  //Transmit!
    assert(ret==ESP_OK);            //Should have had no issues.
}

void SPILCD16bit::writedata16(const uint16_t data)
{
    esp_err_t ret;
    spi_transaction_t t{};
    t.length=16;                 //Len is in uint16_t, transaction length is in bits.
    t.tx_buffer=&data;               //Data
    t.user=(void*)(0x80000000+this->_dc);                //D/C needs to be set to 1
    ret=spi_device_polling_transmit(this->spi_dev,  &t);  //Transmit!
    assert(ret==ESP_OK);            //Should have had no issues.
}

void SPILCD16bit::fillRect(int16_t x, int16_t y, int16_t w, int16_t h) {
	if (boundaryCheck(x, y))
		return;
	if (((x + w) - 1) >= _width)
		w = _width - x;
	if (((y + h) - 1) >= _height)
		h = _height - y;

	while (this->bufferFillerMode != BufferfillerMode::NONE)
		vTaskDelay(10/portTICK_RATE_MS); //wait till a previous process has been finished;
	setAddr(x, y, (x + w) - 1, (y + h) - 1);
	this->bufferFillerMode = BufferfillerMode::RECT;
	this->bufferStep = w * h;
	//while (LL_SPI_IsActiveFlag_BSY(spi)) //as long as the setAddr last byte is transmitted
	//		__NOP();
	//Gpio::Set(_dc, true);
	//Gpio::Set(_cs, false);
	this->fillRectCb();

//	for (y = h; y > 0; y--) {
//		for (x = w; x > 0; x--) {
//			writedata16(color);
//		}
//	}

}

PrintStringError SPILCD16bit::printString(int16_t cursor_x, int16_t cursor_y, int16_t xWindowStart, int16_t xWindowEnd, int16_t yWindowStart, int16_t yWindowEnd, Anchor anchorType, const char *format, ...) {

	//X und Y definieren eine Ankerposition. In welche Richtung ab dort der Text geschrieben wird, bestimmt anchorType
	if(!this->font) return PrintStringError::NO_FONT_SET;
	if(anchorType!=Anchor::BOTTOM_LEFT && anchorType!=Anchor::BOTTOM_RIGHT) return PrintStringError::LAYOUT_NOT_IMPLEMENTED;
	if(xWindowEnd<=xWindowStart) return PrintStringError::PARAM_ASEERTION_ERROR;
	if(yWindowEnd<=yWindowStart) return PrintStringError::PARAM_ASEERTION_ERROR;
	if(BUFFER_SIZE_BYTES/2 < this->_width) return PrintStringError::BUFFER_TOO_SMALL;


	while (this->bufferFillerMode != BufferfillerMode::NONE)
		vTaskDelay(10/portTICK_RATE_MS);
	this->xWindowStart=std::max((int16_t)0, xWindowStart);
	this->xWindowEnd=std::min((int16_t)_width,xWindowEnd);
	this->yWindowStart=std::max((int16_t)0,yWindowStart);
	this->yWindowEnd=std::min((int16_t)_height, yWindowEnd);
	this->bufferStep = yWindowEnd-yWindowStart;
	//va_list va;
	//va_start(va, format);
	//this->strLength=vsnprintf(strBuffer, STRING_BUFFER_SIZE_CHARS, format, va);
	//va_end(va);
	if(anchorType==Anchor::BOTTOM_LEFT)
	{
		this->cursor_x = cursor_x;
		this->cursor_y = cursor_y;
	}
	else if(anchorType==Anchor::BOTTOM_RIGHT)
	{
		this->cursor_x = cursor_x-getTextPixelLength(strBuffer);
		this->cursor_y = cursor_y;
	}
	setAddr(xWindowStart, yWindowStart, xWindowEnd-1, yWindowEnd-1);
	this->bufferFillerMode = BufferfillerMode::STRING;


	//while (LL_SPI_IsActiveFlag_BSY(spi)) //as long as the setAddr last byte is transmitted
	//		__NOP();
	//Gpio::Set(_dc, true);
	//Gpio::Set(_cs, false);
	this->printStringCb();
    return PrintStringError::OK;
}

void SPILCD16bit::printString(int16_t cursor_x, int16_t cursor_y, Anchor anchorType, const char *format, ...) {

	//X und Y definieren eine Ankerposition. In welche Richtung ab dort der Text geschrieben wird, bestimmt anchorType
	if(!this->font) return;
	if(anchorType!=Anchor::BOTTOM_LEFT) 
		while (1)
		{
			// __asm__ __volatile__ ("bkpt #0"); //NOT Implemented
		}

	while (this->bufferFillerMode != BufferfillerMode::NONE)
		vTaskDelay(10/portTICK_RATE_MS); //wait till a previous process has been finished;
	if(BUFFER_SIZE_BYTES/2 < this->_width)//as we write line by line, we need at least one line in the buffer
	{
		while (1) {
				//__asm__ __volatile__ ("bkpt #0");
				
			}
	}


	//va_list va;
	//va_start(va, format);
	//this->strLength=vsnprintf(strBuffer, STRING_BUFFER_SIZE_CHARS, format, va);
	//va_end(va);

	int16_t x1, y1, x2, y2;

	getTextBounds(strBuffer, cursor_x, cursor_y, anchorType, &x1, &y1, &x2, &y2);
	this->cursor_x = cursor_x;
	this->cursor_y = cursor_y;
	this->xWindowStart=std::max((int16_t)0, x1);
	this->xWindowEnd=std::min((int16_t)_width,x2);
	this->yWindowStart=std::max((int16_t)0,y1);
	this->yWindowEnd=std::min((int16_t)_height, y2);


	//this->distanceToBaseline = y1-cursor_y; //negativer Wert, wie glyph->yoffset

	setAddr(xWindowStart, yWindowStart, xWindowEnd-1, yWindowEnd-1);
	this->bufferFillerMode = BufferfillerMode::STRING;
	this->bufferStep = y2-y1;

	//while (LL_SPI_IsActiveFlag_BSY(spi)) //as long as the setAddr last byte is transmitted
	//		__NOP();
	//Gpio::Set(_dc, true);
	//Gpio::Set(_cs, false);
	this->printStringCb();
    return;
}
