==> klaus-liebler/smopla-dps/src/spilcd16bit.cc <==
#include "spilcd16bit.hh"
#include "stm32f1xx_ll_spi.h"
#include "stm32f1xx_ll_dma.h"
#include "stm32f1xx_ll_utils.h"
#include "gpio.hh"
#include <algorithm>
#include <stdio.h>
#include <string.h>
#include "printf/printf.h"

void SPILCD16bit::writecommand(uint8_t c) {
	while (LL_SPI_IsActiveFlag_BSY(spi))
		__NOP();
	Gpio::Set(_dc, false);
	Gpio::Set(_cs, false);
	LL_SPI_TransmitData8(spi, c);

	Gpio::Set(_cs, true);
}

void SPILCD16bit::writedata(uint8_t c) {

	while (LL_SPI_IsActiveFlag_BSY(spi))
		__NOP();
	Gpio::Set(_dc, true);
	Gpio::Set(_cs, false);
	LL_SPI_TransmitData8(spi, c);
	Gpio::Set(_cs, true);
}

void SPILCD16bit::writedata16(uint16_t d) {

	while (LL_SPI_IsActiveFlag_BSY(spi))
		__NOP();
	Gpio::Set(_dc, true);
	Gpio::Set(_cs, false);
	uint8_t d1 = (uint8_t) (d >> 8);
	LL_SPI_TransmitData8(spi, d1);
	uint8_t d2 = (0xFF) & d;
	while (!LL_SPI_IsActiveFlag_TXE(spi))
		;
	LL_SPI_TransmitData8(spi, d2);
	Gpio::Set(_cs, true);
}

void SPILCD16bit::begin(void) {
	Gpio::ConfigurePin(_backlight, PinMode::OUTPUTPP_2MHz);
	Gpio::ConfigurePin(_dc, PinMode::OUTPUTPP_10MHz);
	Gpio::ConfigurePin(_cs, PinMode::OUTPUTPP_10MHz);
	Gpio::Set(_cs, false);
	if (_rst != Pin::NO_PIN) {
		Gpio::ConfigurePin(_rst, PinMode::OUTPUTPP_2MHz, false);
		LL_mDelay(250);//min 10us according to datasheet
		Gpio::Set(_rst, true);
		LL_mDelay(250); //min 120ms according to datasheet
	}
	LL_DMA_ConfigAddresses(
	DMA1, dmaChannel, (uint32_t) buffer, LL_SPI_DMA_GetRegAddr(spi),
	LL_DMA_DIRECTION_MEMORY_TO_PERIPH);
	LL_SPI_Enable(spi);
	chipInit();
}

void SPILCD16bit::fillRect(int16_t x, int16_t y, int16_t w, int16_t h) {
	if (boundaryCheck(x, y))
		return;
	if (((x + w) - 1) >= _width)
		w = _width - x;
	if (((y + h) - 1) >= _height)
		h = _height - y;

	while (this->bufferFillerMode != BufferfillerMode::NONE)
		__NOP(); //wait till a previous process has been finished;
	setAddr(x, y, (x + w) - 1, (y + h) - 1);
	this->bufferFillerMode = BufferfillerMode::RECT;
	this->bufferStep = w * h;
	while (LL_SPI_IsActiveFlag_BSY(spi)) //as long as the setAddr last byte is transmitted
			__NOP();
	Gpio::Set(_dc, true);
	Gpio::Set(_cs, false);
	this->fillRectCb();

//	for (y = h; y > 0; y--) {
//		for (x = w; x > 0; x--) {
//			writedata16(color);
//		}
//	}

}

PrintStringError SPILCD16bit::printString(int16_t cursor_x, int16_t cursor_y, int16_t xWindowStart, int16_t xWindowEnd, int16_t yWindowStart, int16_t yWindowEnd, Anchor anchorType, const char *format, ...) {

	//X und Y definieren eine Ankerposition. In welche Richtung ab dort der Text geschrieben wird, bestimmt anchorType
	if(!this->font) return PrintStringError::NO_FONT_SET;
	if(anchorType!=Anchor::BOTTOM_LEFT && anchorType!=Anchor::BOTTOM_RIGHT) return PrintStringError::LAYOUT_NOT_IMPLEMENTED;
	if(xWindowEnd<=xWindowStart) return PrintStringError::PARAM_ASEERTION_ERROR;
	if(yWindowEnd<=yWindowStart) return PrintStringError::PARAM_ASEERTION_ERROR;
	if(BUFFER_SIZE_BYTES/2 < this->_width) return PrintStringError::BUFFER_TOO_SMALL;


	while (this->bufferFillerMode != BufferfillerMode::NONE)
				__NOP(); //wait till a previous process has been finished;



	this->xWindowStart=std::max((int16_t)0, xWindowStart);
	this->xWindowEnd=std::min((int16_t)_width,xWindowEnd);
	this->yWindowStart=std::max((int16_t)0,yWindowStart);
	this->yWindowEnd=std::min((int16_t)_height, yWindowEnd);
	this->bufferStep = yWindowEnd-yWindowStart;
	va_list va;
	va_start(va, format);
	this->strLength=vsnprintf(strBuffer, STRING_BUFFER_SIZE_CHARS, format, va);
	va_end(va);
	if(anchorType==Anchor::BOTTOM_LEFT)
	{
		this->cursor_x = cursor_x;
		this->cursor_y = cursor_y;
	}
	else if(anchorType==Anchor::BOTTOM_RIGHT)
	{
		this->cursor_x = cursor_x-getTextPixelLength(strBuffer);
		this->cursor_y = cursor_y;
	}


	setAddr(xWindowStart, yWindowStart, xWindowEnd-1, yWindowEnd-1);
	this->bufferFillerMode = BufferfillerMode::STRING;


	while (LL_SPI_IsActiveFlag_BSY(spi)) //as long as the setAddr last byte is transmitted
			__NOP();
	Gpio::Set(_dc, true);
	Gpio::Set(_cs, false);
	this->printStringCb();
    return PrintStringError::OK;
}

void SPILCD16bit::printString(int16_t cursor_x, int16_t cursor_y, Anchor anchorType, const char *format, ...) {

	//X und Y definieren eine Ankerposition. In welche Richtung ab dort der Text geschrieben wird, bestimmt anchorType
	if(!this->font) return;
	if(anchorType!=Anchor::BOTTOM_LEFT) while (1) __asm__ __volatile__ ("bkpt #0"); //NOT Implemented


	while (this->bufferFillerMode != BufferfillerMode::NONE)
				__NOP(); //wait till a previous process has been finished;
	if(BUFFER_SIZE_BYTES/2 < this->_width)//as we write line by line, we need at least one line in the buffer
	{
		while (1) {
				__asm__ __volatile__ ("bkpt #0");
			}
	}


	va_list va;
	va_start(va, format);
	this->strLength=vsnprintf(strBuffer, STRING_BUFFER_SIZE_CHARS, format, va);
	va_end(va);

	int16_t x1, y1, x2, y2;

	getTextBounds(strBuffer, cursor_x, cursor_y, anchorType, &x1, &y1, &x2, &y2);
	this->cursor_x = cursor_x;
	this->cursor_y = cursor_y;
	this->xWindowStart=std::max((int16_t)0, x1);
	this->xWindowEnd=std::min((int16_t)_width,x2);
	this->yWindowStart=std::max((int16_t)0,y1);
	this->yWindowEnd=std::min((int16_t)_height, y2);


	//this->distanceToBaseline = y1-cursor_y; //negativer Wert, wie glyph->yoffset

	setAddr(xWindowStart, yWindowStart, xWindowEnd-1, yWindowEnd-1);
	this->bufferFillerMode = BufferfillerMode::STRING;
	this->bufferStep = y2-y1;

	while (LL_SPI_IsActiveFlag_BSY(spi)) //as long as the setAddr last byte is transmitted
			__NOP();
	Gpio::Set(_dc, true);
	Gpio::Set(_cs, false);
	this->printStringCb();
    return;
}
